--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,18 +4,18 @@ build-backend = "flit_core.buildapi"
 [project]
 name = "pyevt"
 readme = "README.md"
-requires-python = ">=3.5"
+requires-python = ">=3.7"
 authors = [
 	{name = "Eise Hoekstra"},
     {name = "Mark M. Span", email = "m.m.span@gmail.com"},
-	{name = "Martin Stokroos"},
+	{name = "Martin Stokroos"}
 ]
 classifiers = [
     "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
 ]
-dependencies = ["hidapi >= 0.13.0",]
+dependencies = ["hidapi >= 0.14.0",]
 dynamic = ["version", "description"]
 [project.urls]
 Documentation = "https://markspan.github.io/evtplugins/"
-Source = "https://github.com/MartinStokroos/pyEVT"
+Source = "https://github.com/MartinStokroos/pyevt"
 
