--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "pyevt"
-version = "0.2.0"
-description = "pyevt library for EVT-2 devices"
+version = "0.2.1"
+description = "API for EVT-2 USB devices"
 authors = [
     "Eise Hoekstra <eise@example.com>",
     "Mark M. Span <m.m.span@rug.nl>"
